--- a/frontend_project-portfolio/src/container/About/About.scss
+++ b/frontend_project-portfolio/src/container/About/About.scss
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .app__profile-item {
@@ -24,7 +24,7 @@
     width: 100%;
     height: 170px;
     border-radius: 15px;
-    object-fit: cover;
+    object-fit: contain;
   }
 
   @media screen and (min-width: 2000px) {
