--- a/frontend_project-portfolio/src/container/Footer/Footer.scss
+++ b/frontend_project-portfolio/src/container/Footer/Footer.scss
@@ -8,6 +8,14 @@
   }
 }
 
+Form {
+  border: 1px solid lightgray;
+  border-radius: 10px;
+  padding: 20px;
+  width: 50%;
+  background-color: rgba(49, 59, 172, .1)
+}
+
 .app__footer-cards {
   width: 60%;
   display: flex;
@@ -15,6 +23,7 @@
   align-items: center;
   flex-wrap: wrap;
   margin: 4em 2rem 2rem;
+  
 
   .app__footer-card {
     min-width: 290px;
@@ -26,8 +35,7 @@
     margin: 1rem 0;
     padding: 1rem;
     border-radius: 10px;
-    cursor: pointer;
-    background-color: #fef4f5;
+    background-color: var(--white-color);
 
     transition: all 0.3s ease-in-out;
 
@@ -38,14 +46,20 @@
     }
 
     p {
-      font-weight: 500;
-    }
-    a {
       text-decoration: none;
       font-weight: 500;
+      color: var(--secondary-color);
     }
+
     &:hover {
       box-shadow: 0 0 25px #fef4f5;
+      background-color: var(--secondary-color);
+      color: var(--white-color);
+
+
+      p{
+        color: var(--white-color);
+      }
     }
 
     @media screen and (max-width: 450px) {
@@ -58,73 +72,73 @@
   }
 }
 
-.app__footer-cards .app__footer-card:last-child {
-  background-color: #f2f7fb;
-}
+// .app__footer-cards .app__footer-card:last-child {
+//   background-color: #f2f7fb;
+// }
 
-.app__footer-cards .app__footer-card:last-child:hover {
-  box-shadow: 0 0 25px #f2f7fb;
-}
+// .app__footer-cards .app__footer-card:last-child:hover {
+//   box-shadow: 0 0 25px #f2f7fb;
+// }
 
-.app__footer-form {
-  width: 60%;
-  flex-direction: column;
-  margin: 1rem 2rem;
+// .app__footer-form {
+//   width: 60%;
+//   flex-direction: column;
+//   margin: 1rem 2rem;
 
-  div {
-    width: 100%;
+//   div {
+//     width: 100%;
 
-    margin: 0.75rem 0;
-    border-radius: 10px;
-    cursor: pointer;
-    background-color: var(--primary-color);
+//     margin: 0.75rem 0;
+//     border-radius: 10px;
+//     cursor: pointer;
+//     background-color: var(--primary-color);
 
-    transition: all 0.3s ease-in-out;
+//     transition: all 0.3s ease-in-out;
 
-    input,
-    textarea {
-      width: 100%;
-      padding: 0.95rem;
-      border: none;
-      border-radius: 7px;
-      background-color: var(--primary-color);
+//     input,
+//     textarea {
+//       width: 100%;
+//       padding: 0.95rem;
+//       border: none;
+//       border-radius: 7px;
+//       background-color: var(--primary-color);
 
-      font-family: var(--font-base);
-      color: var(--secondary-color);
-      outline: none;
-    }
+//       font-family: var(--font-base);
+//       color: var(--secondary-color);
+//       outline: none;
+//     }
 
-    textarea {
-      height: 170px;
-    }
+//     textarea {
+//       height: 170px;
+//     }
 
-    &:hover {
-      box-shadow: 0 0 25px var(--primary-color);
-    }
-  }
+//     &:hover {
+//       box-shadow: 0 0 25px var(--primary-color);
+//     }
+//   }
 
-  button {
-    padding: 1rem 2rem;
-    border-radius: 10px;
-    border: none;
-    background-color: var(--secondary-color);
+//   button {
+//     padding: 1rem 2rem;
+//     border-radius: 10px;
+//     border: none;
+//     background-color: var(--secondary-color);
 
-    font-weight: 500;
-    color: var(--white-color);
-    outline: none;
-    margin: 2rem 0 0 0;
-    font-family: var(--font-base);
+//     font-weight: 500;
+//     color: var(--white-color);
+//     outline: none;
+//     margin: 2rem 0 0 0;
+//     font-family: var(--font-base);
 
-    transition: cubic-bezier(0.55, 0.085, 0.68, 0.53);
-    cursor: pointer;
+//     transition: cubic-bezier(0.55, 0.085, 0.68, 0.53);
+//     cursor: pointer;
 
-    &:hover {
-      background-color: #2430af;
-    }
-  }
+//     &:hover {
+//       background-color: #2430af;
+//     }
+//   }
 
-  @media screen and (max-width: 768px) {
-    width: 100%;
-    margin: 1rem 0;
-  }
-}
+//   @media screen and (max-width: 768px) {
+//     width: 100%;
+//     margin: 1rem 0;
+//   }
+// }
