--- a/frontend_project-portfolio/src/container/Skills/Skills.scss
+++ b/frontend_project-portfolio/src/container/Skills/Skills.scss
@@ -2,6 +2,7 @@
   flex: 1;
   width: 100%;
   flex-direction: column;
+  padding-top: 8vh;
 }
 
 .app__skills-container {
@@ -121,13 +122,15 @@
 
     h4 {
       font-weight: 600;
-      font-size: larger;
+      font-size: x-large;
+      margin-bottom: .25rem;
     }
 
     p {
       font-weight: 400;
       color: var(--gray-color);
-      font-size: medium;
+      font-size: larger;
+      margin-bottom: .5rem;
     }
 
     span {
@@ -137,7 +140,6 @@
 
     .portable-text {
       padding-left: 2rem;
-      gap: 1rem;
     }
 
   }
@@ -193,7 +195,4 @@
     }
   }
 
-  // .linkedInButton {
-  //   background-color: var(--secondary-color);
-  // }
 }
