--- a/frontend_project-portfolio/src/container/Skills/Skills.scss
+++ b/frontend_project-portfolio/src/container/Skills/Skills.scss
@@ -32,11 +32,20 @@
   align-items: flex-start;
 
   margin-right: 5rem;
+  margin-bottom: 5rem;
 
   @media screen and (max-width: 900px) {
     margin-right: 0;
     justify-content: center;
     align-items: center;
+  }
+  .app__skills-icon-list{
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 3rem;
   }
 }
 
